--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <header class="main-header">
             <div class="wc-container">
                 <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
-                <h2>{{ site.harmony.description }}</h2>
+                <h2 style="color: rgba(00,00,00,0.5)">{{ site.harmony.description }}</h2>
                 {% include header-links.html %}                
             </div>
         </header>
